<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_TitleTagID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:gravity="start"
        android:text="@string/product"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view"
        app:layout_constraintEnd_toStartOf="@+id/tv_TitleTagCount"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_TitleTagCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:gravity="end"
        android:text="@string/count"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_TitleTagID" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="" />

    <ProgressBar
        android:id="@+id/progress_product_searchTAG"
        android:layout_width="127dp"
        android:layout_height="102dp"
        android:layout_marginTop="128dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/lb_ReadTime"
        android:layout_width="112dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="632dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="Time"
        app:layout_constraintBottom_toTopOf="@+id/sp_stage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lb_TagCount"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/lb_ReadSpeed"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="632dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="Speed"
        app:layout_constraintBottom_toTopOf="@+id/sp_stage"
        app:layout_constraintEnd_toStartOf="@+id/lb_TagCount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/lb_TagCount"
        android:layout_width="161dp"
        android:layout_height="44dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="632dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="Count"
        app:layout_constraintBottom_toTopOf="@+id/sp_stage"
        app:layout_constraintEnd_toStartOf="@+id/lb_ReadTime"
        app:layout_constraintStart_toEndOf="@+id/lb_ReadSpeed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/sp_ReadType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/Array_ReadType"
        android:minHeight="48dp"
        android:prompt="@string/Clear_Tags"
        android:textSize="18sp"
        android:visibility="gone"
        tools:ignore="DuplicateSpeakableTextCheck,MissingConstraints" />

    <Spinner
        android:id="@+id/sp_stage"
        android:layout_width="91dp"
        android:layout_height="50dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:entries="@array/Array_Stage"
        android:minHeight="48dp"
        android:prompt="@string/Clear_Tags"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_Read"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btn_Read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:onClick="Read"
        android:text="@string/start"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_loadToDB"
        app:layout_constraintStart_toEndOf="@+id/sp_stage" />

    <Button
        android:id="@+id/btn_deleteItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:onClick="DeleteItems"
        android:text="@string/quit_items"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_loadToDB" />

    <Button
        android:id="@+id/btn_loadToDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:onClick="LoadToDB"
        android:text="@string/load_to_db"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_deleteItems"
        app:layout_constraintStart_toEndOf="@+id/btn_Read" />


</androidx.constraintlayout.widget.ConstraintLayout>